# AiCodeAudit

./: .gitignore  README.md  app.py  config.example.yaml  config.yaml  main.py  pyproject.toml  requirements.txt
audit/: agent.py  chunker.py  scaner.py  service.py  tool.py  tree_sitter_parser.py
config/: config.py
models/: __init__.py
prompt/: __init__.py
utils/: __init__.py
